# PersonalTradingAgents

./: .env.example  .gitignore  CLAUDE.MD  NOTICE  README.md  main.py  pyproject.toml  start.ps1  start.sh
.omo/run-continuation/: ses_14041b367ffeCJBlulaIV0pN6Z.json  ses_140ca6858ffe7rLT0PUaHuFjSF.json  ses_140caea4cffeUEjyU3AFlhtUNQ.json
docs/: agent-workflow.md  architecture.md  chanlun-signal-detection.md  data-and-privacy.md  data-layer.md  development.md  knowledge-system.md  project-evolution.md
openspec/: config.yaml
src/: config.py
src/agents/: analysis_memory.py  data_bridge.py  data_vendor.py  quality_gate.py  signal_tools.py  trading_agents_wrapper.py
src/api/: __main__.py  dependencies.py  main.py  models.py
src/data/: cache.py  collector.py  fund_holdings_job.py  fund_holdings_store.py  historical_store.py
src/knowledge/: derived_build.py  derived_chunker.py  derived_entities.py  derived_lint.py  derived_models.py  derived_store.py  raw_auto_collector.py  raw_migrate.py  raw_models.py  raw_renderers.py  raw_store.py  wiki_build.py  wiki_ingest_queue.py  wiki_ingestor.py  wiki_lint.py  wiki_models.py  wiki_planner.py  wiki_renderers.py  wiki_schema.py  wiki_store.py
src/news/: collector.py  models.py  relevance.py
src/orchestrator/: job_store.py  job_worker.py  phase_reporter.py  pipeline.py  scheduler.py  state.py
src/portfolio/: daily_inspection.py  manager.py  models.py  orchestrator.py  trade_apply.py  (+1 more)
tests/: conftest.py  test_config.py  test_config_api_fields.py  test_imports.py
web/: index.html  package-lock.json  package.json
(+316 files in other folders)
