[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-ai-trader"
version = "0.2.0"
description = "持仓驱动的个人AI投研助手"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "akshare>=1.14.0",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "stockstats>=0.6.4",
    "requests>=2.31.0",
    "PyYAML>=6.0.0",
    "python-dateutil>=2.8.2",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "browser-cookie3>=0.20.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "ruff>=0.5.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: tests that call real external services and may be slow or flaky",
]
